# shopsy

./: docker-compose.yml
models/: package.json
models/scripts/: BUILD
nginx-gateway/: nginx.conf
node-gateway/: Dockerfile  package-lock.json  package.json
node-gateway/src/: index.ts
node-gateway/src/conf/: env.ts
node-gateway/src/express/: index.ts
node-gateway/src/express/protobufs/: index.ts  test_service.ts
node-gateway/src/kafka/: kafka.ts
protos/: .npmrc  Dockerfile  package-lock.json  package.json  tsconfig.json
protos/protobufs/: TestService.proto
protos/scripts/: BUILD
react-client/: .gitignore  Dockerfile  package-lock.json  package.json
react-client/javascript/: .npmrc  config-overrides.js  package-lock.json  package.json
react-client/javascript/config/: webpack.config.js
react-client/javascript/docker_scripts/: start.sh
react-client/javascript/public/: index.html
react-client/javascript/src/: App.tsx  index.css  index.tsx
react-client/javascript/src/pages/Home/: Home.tsx
react-client/javascript/src/pages/Home/components/Footer/: Footer.scss  Footer.tsx
react-client/javascript/src/pages/Home/components/Header/: Header.tsx  (+1 more)
react-client/javascript/src/protos/: index.ts
react-client/javascript/src/router/: AppRouter.tsx
react-client/javascript/src/theme/: index.ts
react-client/scripts/: start.sh
react-client/src/: App.tsx
react-client/wasm/: Cargo.toml  Dockerfile  build.sh
react-client/wasm/src/: lib.rs
rust/: Cargo.toml  Dockerfile
rust-kafka-consumer/: Cargo.toml
rust-kafka-consumer/src/: main.rs
rust-kafka-producer/: Dockerfile
rust/src/: main.rs
(+1 files in other folders)
