[package]
name = "rust"
version = "0.1.0"
authors = ["Aneesh Saripalli <aneeshsaripalli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
kafka = "0.8.0"
cargo-watch = "7.4.1"